--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "validator": "^13.5.2"
   },
   "devDependencies": {},
   "scripts": {
