--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "UCLA Bootcamp 2nd Project",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
     "dotenv": "^8.2.0",
