--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.6.2",
     "validator": "^13.5.2"
   },
@@ -20,7 +21,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seeds": "node seeds/index.js"
+    "seeds": "node seeds/index.js",
+    "nodemon": "nodemon server.js"
   },
   "repository": {
     "type": "git",
