--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Movie-Thumbs",
+  "name": "movie-thumbs",
   "version": "1.0.0",
   "description": "UCLA Bootcamp 2nd Project",
   "main": "server.js",
